<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_PowerMaster" Id="{ae35270e-336b-4fe2-a4a1-bdb5084d3b39}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PowerMaster
VAR
  stm	: UINT := 10;
  bFW, bBW,bPower,bReset,bResetDone,bError,bBusy,bPowerStatus : BOOL := FALSE;
  errId : UDINT;
  
  fbPower : MC_Power;
  fbReset : MC_Reset;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbPower(
	Axis:= G.stAX.Master, 
	Enable:= bPower, 
	Enable_Positive:= bPower, 
	Enable_Negative:= bPower, 
	Override:= 100.0, 
  Status=>bPowerStatus,
	Busy=>bBusy , 
	Error=>bError, 
	ErrorID=> errId);

fbReset(
	Axis:= G.stAX.Master, 
	Execute:= bReset, 
	Done=> bResetDone,
	Busy=> bBusy, 
	Error=>bError, 
	ErrorID=>errId);
  
CASE stm OF 
  10:
		bPower := TRUE;
 		stm := 20;
	20:
		IF G.stAX.Master.Status.Error THEN //really at the level of NC
			stm := 30;
		ELSE
			stm := 50;
		END_IF
	30:
		bReset := TRUE;
		stm := 40;	
	40:
		IF bResetDone THEN
			bReset := FALSE;
			stm := 50;
		END_IF
	50:
    bPowerStatus := fbPower.Status;
		IF bPowerStatus THEN
			stm := 0;
		END_IF
   
  0:stm := 0;
END_CASE]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>